newの画面にフォームを作成

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,2 +1,38 @@
-<h1>お店を登録してください</h1>
+<div class="main">
+  <div class="inner">
+    <div class="form__wrapper">
+      <h1 class="page-heading">お店を登録してください</h1>
+        <%= form_with model: @restaurant, url: restaurants_path, local: true do |f| %>
 
+        <div class="field">
+          <%= f.label :restaurant, "Restaurant name" %><br />
+          <%= f.text_field :restaurant %>
+        </div>
+
+        <div class="field">
+         <%= f.label :time_zone, "時間帯" %><br />
+         <%= f.collection_select(:time_zone_id , TimeZone.all, :id, :name, {}, {class:"select-box", id:"time_zone"}) %>
+        </div>
+
+        <div class="field">
+         <%= f.label :category, "カテゴリー" %><br />
+         <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"select-box", id:"category"}) %>
+        </div>
+
+        <div class="field">
+         <%= f.label :close_time, "年齢" %><br />
+         <%= f.collection_select(:close_time_id, CloseTime.all, :id, :name, {}, {class:"select-box", id:"close_time"}) %>
+        </div>
+
+        <div class="field">
+          <%= f.label :memo, "備考" %><br />
+          <%= f.text_area :memo, class: :form__text %>
+        </div>
+        
+        <div class="actions">
+          <%= f.submit "お店をシェア！", class: :form__btn  %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
