--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,13 +25,13 @@
         </div>
 
         <div class="field">
-         <%= f.label :occupation, "年齢" %><br />
+         <%= f.label :age, "年齢" %><br />
          <%= f.collection_select(:age_id, Age.all, :id, :name, {}, {class:"select-box", id:"age"}) %>
         </div>
 
         <div class="field">
-         <%= f.label :occupation, "性別" %><br />
-         <%= f.collection_select(:gender_id, Gender.all, :id, :name, {}, {class:"select-box", id:"age"}) %>
+         <%= f.label :gender, "性別" %><br />
+         <%= f.collection_select(:gender_id, Gender.all, :id, :name, {}, {class:"select-box", id:"gender"}) %>
         </div>
 
         <div class="field">
