--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,3 +1,5 @@
+
+
 .nav__left {
   width: 100%;
   height:10vh;
@@ -25,6 +27,7 @@ li{
   font-family:serif
 }
 .user-nickname{
+  margin: 0 0 0 10px ;
   text-decoration: none;
   color: #000;
   font-family:serif
