--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -25,6 +25,11 @@
         </div>
 
         <div class="field">
+          <%= f.label :gaibu_net, "詳細URL" %><br />
+          <%= f.text_area :gaibu_net, class: :form__text %>
+        </div>
+
+        <div class="field">
           <%= f.label :memo, "備考" %><br />
           <%= f.text_area :memo, class: :form__text %>
         </div>
