--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,16 +12,16 @@
       <div class="prototype__body">
 
       <div class="prototype__comments">
-        <% if current_user %>
-          <%# <%= form_with model: [@restaurant, @comment], local: true do |f|%> 
+        <% if user_signed_in? %> 
+           <%= form_with model: [@restaurant, @comment], local: true do |f|%> 
             <div class="field">
-              <%# <%= f.label :comment, "コメント" %><br /> 
-              <%# <%= f.text_field :comment %> 
+               <%= f.label :comment, "コメント" %><br /> 
+               <%= f.text_field :comment %> 
             </div>
             <div class="actions">
-              <%# <%= f.submit "送信する", class: :form__btn  %> 
+               <%= f.submit "送信する", class: :form__btn  %> 
             </div>
-          <%# <% end %>  
+           <% end %>  
         <% end %>
         <ul class="comments_lists">
           <%# <% @comments.each do |comment| %> 
