コメント一覧表示完了

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -23,13 +23,14 @@
             </div>
            <% end %>  
         <% end %>
-        <ul class="comments_lists">
-          <%# <% @comments.each do |comment| %> 
+        <p>コメント一覧</p>
+        <ul class="comments_lists"> 
+          <% @comments.each do |comment| %>
             <li class="comments_list">
-              <%# <%= "#{comment.text}"%> 
-              <%# <%= link_to "（#{comment.user.name}）", user_path(comment.user) ,class: :comment_user %> 
+               <%= "#{comment.comment}"%> 
+               <%= link_to "（#{comment.user.nickname}）", "#",class: :comment_user %> 
             </li>
-          <%# <% end %> 
+          <% end %> 
         </ul>
       </div>
     </div>
