--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,10 @@
               <li><%= link_to "#{current_user.nickname}", "#", class: "user-nickname" %>  さん   ログイン中</li>
               <li><%= link_to '行ってみたいお店発見！', new_restaurant_path, class: "omise__btn" %></li>
               <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav__btn" %></li>
+              <li><%= form_with(url: search_restaurants_path, local: true, method: :get, class: "search-form") do |form| %>
+              <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
+              <%= form.submit "検索", class: "search-btn" %></li>
+            <% end %>
             </div>
           <% else %>
             <div class="nav__right">
