--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,4 @@
-<%= form_with(url: root_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
-  <%= form.submit "検索", class: "search-btn" %>
-<% end %>
+<p class=margin__tag>TOP PAGE</p>
 <div class="contents row">
   <%= render partial: 'restaurant', collection: @restaurants %>
 </div>
