--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -9,6 +9,25 @@ body {
   font-family: 'arial unicode ms'
 }
 
+/* PC表示時 */
+p {
+  font-size: 30px;
+ }
+ 
+ /* タブレット表示時 */
+ @media (max-width: 1000px) {
+   p {
+     font-size: 25px;
+   }
+ }
+ 
+ /* スマホ表示時 */
+ @media (max-width: 500px) {
+   p {
+     font-size: 20px;
+   }
+ }
+
 .nav__left {
   width: 100%;
   height:10vh;
