--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -5,13 +5,13 @@
 } */
 
 body {
-  /* font-family: 'Comic Sans MS', cursive; */
+  font-family: 'Comic Sans MS', cursive;
   font-family: 'arial unicode ms'
 }
 
 /* PC表示時 */
 p {
-  font-size: 30px;
+  font-size: 20px;
  }
  
  /* タブレット表示時 */
