ユーザー詳細ページ完成
そのユーザーが投稿したレストラン一覧も見れます。

--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,5 +1,5 @@
 .margin__tag{
   margin: 3px ;
-  /* border-bottom: 1px solid red; */
+  border-bottom: 1px solid red;
   border-bottom: 2px dashed #66CCCC;
 }
