--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           </div>
           <% if user_signed_in? %>
             <div class="nav__right">
-              <li><%= link_to "#{current_user.nickname}", "#", class: "user-nickname" %>  さん   ログイン中</li>
+              <li><%= link_to "#{current_user.nickname}", user_path(current_user.id), class: "user-nickname" %>  さん   ログイン中</li>
               <li><%= link_to '行ってみたいお店発見！', new_restaurant_path, class: "omise__btn" %></li>
               <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "nav__btn" %></li>
               <li><%= form_with(url: search_restaurants_path, local: true, method: :get, class: "search-form") do |form| %>
