--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
       <div class="inner">
         <div class="nav">
           <div class="nav__left">
-            <%= link_to "TABEIKU",root_path,class: "logo"  %> 
+           <%= link_to image_tag("logo.png", class: :logo__tag), root_path %>
+            <%# <%= link_to "TABEIKU",root_path,class: "logo"  %>
           <%# <div class="logo">TABEIKU</div> %>
           </div>
           <% if user_signed_in? %>
