--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -23,6 +23,8 @@
             </div>
            <% end %>  
         <% end %>
+              <div class="line-it-button" data-lang="ja" data-type="share-a" data-ver="3" data-url="https://tabeiku-app.herokuapp.com/" data-color="default" data-size="large" data-count="false" style="display: none;"></div>
+      <script src="https://www.line-website.com/social-plugins/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
         <p>コメント一覧</p>
         <ul class="comments_lists"> 
           <% @comments.each do |comment| %>
